<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Breakdown Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="sort">Sort</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_status">Sort by status</string>
    <string name="sort_by_added_date">Sort by added date</string>
    <string name="sort_by_solution_date">Sort by solution date</string>

    <string name="add">Add</string>
    
    <string name="import_breakdown">Import breakdown</string>
    
    <string name="empty_list_message">No breakdown has been added yet</string>
    
    <string name="title">Title:</string>
    <string name="state">State:</string>
    <string name="identifier">Identifier:</string>
    <string name="added_date">Added date:</string>
    <string name="solution_date">Solution date:</string>
    <string name="number_of_photos">Number of photos:</string>
    
    <string name="empty">- - -</string>
    
    <string name="map_layers">Map layers</string>
    <string name="type_normal">Type normal</string>
    <string name="type_hybrid">Type hybrid</string>
    <string name="type_terrain">Type terrain</string>
    
    <string name="breakdown_particulars_fragment_details_page_details">details</string>
    <string name="breakdown_particulars_fragment_details_page_position">position</string>
    
</resources>
